--- a/templates/partials/_navbar.html
+++ b/templates/partials/_navbar.html
@@ -48,14 +48,14 @@
               class="nav-item mr-3"
             {% endif %}
             >
-              <a class="nav-link" href="dashboard">
+              <a class="nav-link" href="{% url 'dashboard' %}">
                Welcome {{ user.username }} (Dashboard)</a>
             </li>
             <li class="nav-item mr-3">
               <a href="javascript:{document.getElementById('logout').submit()}" class="nav-link">
                 <i class="fas fa-sign-out-alt"></i> Logout
               </a>
-              <form action="logout" method="POST" id="logout">
+              <form action="{% url 'logout' %}" method="POST" id="logout">
                 {% csrf_token %}
                 <input type="hidden">
               </form>
